# lime

./: .env.example  .gitignore  LIME.md  cli.py  requirements.txt
backend/: main.py
backend/api/: crypto_routes.py  knowledge_routes.py  push_routes.py  routes.py  sync_routes.py  websocket.py
backend/audio/: capture.py  chunker.py  compressor.py  session.py  vad.py
backend/config/: settings.py
backend/diarization/: speaker.py
backend/intelligence/: __init__.py  briefing.py  connections.py  insights.py  llm.py  pipeline.py  prompts.py
backend/knowledge/: __init__.py  entities.py  graph.py
backend/learning/: __init__.py  consolidation.py  memory.py  scheduler.py
backend/models/: knowledge.py  meeting.py
backend/storage/: database.py  vector_store.py
backend/sync/: __init__.py  changelog.py  clock.py  cloud.py  conflict.py  encryption.py  engine.py  models.py  protocol.py  vault.py
backend/transcription/: cloud.py  engine.py  local.py
desktop/: index.html  package.json  pnpm-lock.yaml
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
mobile/: project.yml
mobile/LIME/: LIME.entitlements
mobile/LIME.xcodeproj/: project.pbxproj
mobile/LIMETests/: LIMETests.swift
scripts/: setup.py  setup_web.py
web/: .env.example  .gitignore  auth.config.ts  auth.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: globals.css  icon.tsx  layout.tsx
(+98 files in other folders)
